--- a/src/scrape/scrape_extension/manifest.json
+++ b/src/scrape/scrape_extension/manifest.json
@@ -6,5 +6,8 @@
   "permissions": ["activeTab", "scripting"],
   "action": {
     "default_popup": "popup.html"
+  },
+  "background": {
+    "service_worker": "background.js"
   }
 }
